# SMN_tools

./: .gitignore  Makefile  README.md  environment.yml  lista  pyproject.toml  requirements.txt  setup.py
cods/: install_kernel.py  test_extrac.py  test_plot.ipynb  test_plot.py
cods/prueba/: ejecuta_test.sh  mira_var.py
data/PERU_ETA22/2025/202501/2025010106/: latlon_000.idx
data/PERU_WRF22/202501/2025010106/: WRFPRS_d01.00  WRFPRS_d01.00.idx  WRFPRS_d01.03  WRFPRS_d01.06  WRFPRS_d01.09
script/: borrar.py  busca_radiacion.sh  mira_dataset.py  test_extrac.py
src/SMN_tools/: ETA_extrae.py  WRF_extrae.py  __init__.py  __main__.py  delete_files.py  make_paleta.py  merge_netcdf.py  procesa_netcdf.py  rename_clean.py
src/SMN_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/SMN_tools/antes/: extrae.py  rename_clean.py  test_procesa.py  v0_extrae.py  v0_rename_clean.py  v1_extrae.py  v1_procesa_netcdf.py  v2_extrae.py
