[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SMN_tools"
version = "0.1.0"
description = "Herramientas para procesamiento de modelos ETA/WRF y NetCDF"
authors = [
    { name = "Japq", email = "japaredesq@gmail.com" }
]

#
dependencies = [
    "xarray>=2023.12.0",
    "cfgrib>=0.9.14.0",
    "numpy>=1.26.4",
    "netCDF4>=1.6.5",
    "h5netcdf>=1.2.0",
]
#
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"

[tool.setuptools.packages.find]
where = ["src"]

