[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SMN_tools"
version = "0.1.0"
description = "Herramientas para procesamiento de modelos ETA/WRF y NetCDF"
authors = [
    { name = "Japq", email = "japaredesq@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"

[project]
dependencies = [
    "xarray>=2023.7.0",
    "cfgrib>=0.9.10.4",
    "numpy>=1.24.3",
    "netCDF4>=1.6.2",
    "h5netcdf>=1.2.0",
    "pandas>=2.0.3",
    "eccodes>=2.27.0",
    "h5py>=3.8.0",
    "ipykernel>=6.0.0",
    "matplotlib>=3.7.0",   # <-- agregado
    "pillow>=9.0.0",       # <-- agregado
]


[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
install-smn-kernel = "SMN_tools.scripts.install_kernel:main"

